--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.1",
     "mongoose-slug-generator": "^1.0.4",
-    "nanoid": "^5.0.7",
+    "nanoid": "3.3.5",
     "pino": "^8.20.0",
     "zod": "^3.22.4",
     "zod-express-middleware": "^1.4.0"
