--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "build": "parcel build"
   },
   "dependencies": {
+    "aws-sdk": "^2.1601.0",
     "axios": "^1.6.8",
     "lucide-react": "^0.368.0",
     "react": "^18.2.0",
@@ -35,6 +36,8 @@
     "path-browserify": "^1.0.0",
     "postcss": "^8.4.38",
     "process": "^0.11.10",
+    "punycode": "^1.4.1",
+    "querystring-es3": "^0.2.1",
     "stream-browserify": "^3.0.0",
     "string_decoder": "^1.3.0",
     "tailwindcss": "^3.4.3",
