--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "build": "parcel build"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "aws-sdk": "^2.1601.0",
     "axios": "^1.6.8",
     "lucide-react": "^0.368.0",
@@ -17,8 +18,10 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.3",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
     "rimraf": "^5.0.5"
   },
   "devDependencies": {
